--- a/servicos.html
+++ b/servicos.html
@@ -42,21 +42,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="./imagens/residencial.jpg" class="d-block w-100" alt="Mudança Residencial">
-            <div class="carousel-caption d-none d-md-block">
+           <div class="carousel-caption d-sm-block bg-primary bg-opacity-25 text-white rounded p-2">
               <h5>Mudanças Residenciais</h5>
               <p>Transporte seguro e eficiente para o seu novo lar.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./imagens/comercial.jpg" class="d-block w-100" alt="Mudança Comercial">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-sm-block bg-primary bg-opacity-25 text-white rounded p-2">
               <h5>Mudanças Comerciais</h5>
               <p>Soluções rápidas para empresas de todos os tamanhos.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./imagens/armazenagem.jpg" class="d-block w-100" alt="Armazenagem">
-            <div class="carousel-caption d-none d-md-block">
+             <div class="carousel-caption d-sm-block bg-primary bg-opacity-25 text-white rounded p-2">
               <h5>Armazenagem</h5>
               <p>Espaço seguro para guardar seus pertences temporariamente.</p>
             </div>
